<resources>
    <string name="app_name">ArticleViewer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="edit">EDIT</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string-array name="cameraOptions">
        <item>Take Photo</item>
        <item>Choose from Gallery</item>
        <item>Choose from Folder</item>
        <item>Cancel</item>

    </string-array>
</resources>